# general-gui-controller

./: .gitignore  README.md  general_gui_controller.py  kalirkosh.py  madlyx_upload.py  open_moodle.py  playground.py  pyproject.toml  requirements.txt  save_clipbaord_image.py  solidworks_pack_and_go.py  tafnit_change_all_categories.py  take_pictures_kalifcode.py  turn_on_vpn.py  update_solidworks_global_variable.py  utils.py
core/: _sample_equations.txt  auto_operate_microscope.py  debug_solidworks_equations_file.py  general_gui_controller.py  kalifcode.py  utils.py
specific_automation_files/: kalirkosh.py  madlyx_upload.py  save_clipbaord_image.py  turn_on_vpn.py
